data/derived/comb/progs/unify/prog4979.ml.out
Characters 104-114:
  d@(n mod 10);;
    ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
